<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/lgmpng"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lgm" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:labelFor="@id/spinner"
        android:text="@string/select_state"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@id/spinner"
        app:layout_constraintLeft_toRightOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginTop="70sp"
        style="@style/spinner_style"
        android:dropDownSelector="@color/white"
        app:layout_constraintCircleRadius="40sp"
        app:layout_constraintLeft_toRightOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_city"
        app:layout_constraintBottom_toTopOf="@id/districtSpinner"
        app:layout_constraintLeft_toRightOf="@id/guideline2"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"

        android:textColor="@color/black"
        android:textSize="20sp"
        android:labelFor="@id/districtSpinner"
        android:layout_marginStart="10sp"
        app:layout_constraintRight_toLeftOf="@id/guideline3"/>

    <Spinner
        android:id="@+id/districtSpinner"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginTop="70sp"
        style="@style/spinner_style"
        android:dropDownSelector="@color/white"
        app:layout_constraintCircleRadius="40sp"
        app:layout_constraintLeft_toRightOf="@id/guideline2"
        app:layout_constraintRight_toLeftOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        android:spinnerMode="dropdown"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FF6969"
        android:textSize="20sp"
        android:padding="10sp"
        android:text="@string/go"
        android:onClick="onButtonClicked" />

</androidx.constraintlayout.widget.ConstraintLayout>